<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.SupportDeveloperFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/msgToUserTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_to_user"
                tools:text="cxedcf" />

            <Button
                android:id="@+id/buttonShowAds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_ads" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner1_id" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner2_id" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner3_id" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner4_id" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner5_id" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner6_id" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner7_id" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner8_id" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner9_id" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner10_id" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</FrameLayout>