<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.CalculatorFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/historyTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="end"
                android:text="TextView"
                android:textSize="18sp" />
        </ScrollView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/currentExpressionTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="TextView"
                android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/operation_row5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/operation_row1"
                app:layout_constraintStart_toStartOf="parent">


                <Button
                    android:id="@+id/buttonNotImplication"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="@string/not_implication" />

                <Button
                    android:id="@+id/buttonNotConverseImplication"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="@string/not_converse_implication" />

                <Button
                    android:id="@+id/buttonClearAll"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="@string/clear_all" />

                <Button
                    android:id="@+id/buttonClearLastSign"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/clear_last_sign" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/operation_row4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toTopOf="@+id/operation_row1"
                app:layout_constraintStart_toStartOf="parent">


                <Button
                    android:id="@+id/buttonImplication"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="@string/implication" />

                <Button
                    android:id="@+id/buttonConverseImplication"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="@string/converse_implication" />

                <Button
                    android:id="@+id/buttonExclusiveOr"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="@string/exclusive_or" />

                <Button
                    android:id="@+id/buttonLeftBracket"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/left_bracket" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/operation_row3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toTopOf="@+id/operation_row1"
                app:layout_constraintStart_toStartOf="parent">


                <Button
                    android:id="@+id/buttonNotAnd"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="@string/not_and" />

                <Button
                    android:id="@+id/buttonNotOr"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="@string/not_or" />

                <Button
                    android:id="@+id/buttonEquality"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="@string/equality" />

                <Button
                    android:id="@+id/buttonRightBracket"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/right_bracket" />
            </LinearLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/operation_rows_1_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:id="@+id/operation_row2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/operation_row1"
                    app:layout_constraintStart_toStartOf="parent">


                    <Button
                        android:id="@+id/buttonNot"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:text="@string/not"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/buttonConjunction"
                        android:layout_width="124dp"
                        android:layout_height="80dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:text="@string/conjunction" />

                    <Button
                        android:id="@+id/buttonDisjunction"
                        android:layout_width="124dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:text="@string/disjunction" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/operation_row1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent">


                    <Button
                        android:id="@+id/buttonTrue"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:text="@string/false_value" />

                    <Button
                        android:id="@+id/buttonFalse"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:text="@string/true_value" />

                    <Button
                        android:id="@+id/buttonNull"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:text="@string/null_value" />
                </LinearLayout>


                <Button
                    android:id="@+id/buttonEquals"
                    android:layout_width="80dp"
                    android:layout_height="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/equals"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/operation_row1"
                    app:layout_constraintTop_toTopOf="@+id/operation_row2" />

            </android.support.constraint.ConstraintLayout>

            <!--</LinearLayout>-->


        </LinearLayout>


    </android.support.constraint.ConstraintLayout>


</FrameLayout>